tests/expectations/compiler/dynamic_call/unknown_function_fail.out
Error [ETYC0372005]: Unknown function `test.aleo::Foo::baz`
    --> compiler-test:11:30
     |
  11 |         return Foo@(target)::baz(1u32);
     |                              ^^^
